Added Preflow push to utils

--- a/notebooks/DenverMap.ipynb
+++ b/notebooks/DenverMap.ipynb
@@ -22,15 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "640178d4-ebec-442a-aa0d-fc1e5d506c73",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-04-24T20:20:29.786605Z",
-     "iopub.status.busy": "2022-04-24T20:20:29.786291Z",
-     "iopub.status.idle": "2022-04-24T20:20:32.007944Z",
-     "shell.execute_reply": "2022-04-24T20:20:32.007320Z",
-     "shell.execute_reply.started": "2022-04-24T20:20:29.786547Z"
+     "iopub.execute_input": "2022-04-25T20:13:28.268420Z",
+     "iopub.status.busy": "2022-04-25T20:13:28.268191Z",
+     "iopub.status.idle": "2022-04-25T20:13:28.294783Z",
+     "shell.execute_reply": "2022-04-25T20:13:28.294263Z",
+     "shell.execute_reply.started": "2022-04-25T20:13:28.268398Z"
     },
     "tags": []
    },
@@ -53,7 +53,8 @@
     "from matplotlib import cm, colors\n",
     "from shapely.ops import cascaded_union\n",
     "from tqdm import tqdm\n",
-    "from util import *"
+    "from util import *\n",
+    "from preflowpush import *"
    ]
   },
   {
@@ -1071,14 +1072,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d5a42a7-81a3-4316-b5a8-35cdaa476bd2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "6ef85f74-30bc-4edd-94f5-78eae79b1a10",
    "metadata": {
@@ -1138,8 +1131,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 104,
+   "id": "ae9918bd-387c-438b-afe2-e5f842f5c8f2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-04-27T00:21:45.619074Z",
+     "iopub.status.busy": "2022-04-27T00:21:45.618807Z",
+     "iopub.status.idle": "2022-04-27T00:21:47.082063Z",
+     "shell.execute_reply": "2022-04-27T00:21:47.081239Z",
+     "shell.execute_reply.started": "2022-04-27T00:21:45.619048Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4294.777742172835"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.maximum_flow(nx.DiGraph(map_a), 176064224, 176070187)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "673f47ff-c281-4154-9447-63836fa63db6",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-04-27T00:23:31.219273Z",
+     "iopub.status.busy": "2022-04-27T00:23:31.219056Z",
+     "iopub.status.idle": "2022-04-27T00:23:32.118618Z",
+     "shell.execute_reply": "2022-04-27T00:23:32.117826Z",
+     "shell.execute_reply.started": "2022-04-27T00:23:31.219251Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4294.777742172833"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preflow_push(nx.DiGraph(map_a), 176064224, 176070187)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7ffcba61-b3c7-4544-a6a9-77107d3e15a0",
+   "id": "6e251b8c-ac2e-4618-9fa2-225bcdd2c3dc",
    "metadata": {},
    "outputs": [],
    "source": []
