--- a/notebooks/StreetSelection.ipynb
+++ b/notebooks/StreetSelection.ipynb
@@ -30,15 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "5fb44908-7389-474b-9e2f-81efb4fa03bd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-04-25T03:17:03.923328Z",
-     "iopub.status.busy": "2022-04-25T03:17:03.923064Z",
-     "iopub.status.idle": "2022-04-25T03:17:06.007295Z",
-     "shell.execute_reply": "2022-04-25T03:17:06.006811Z",
-     "shell.execute_reply.started": "2022-04-25T03:17:03.923304Z"
+     "iopub.execute_input": "2022-04-25T20:32:49.275126Z",
+     "iopub.status.busy": "2022-04-25T20:32:49.274905Z",
+     "iopub.status.idle": "2022-04-25T20:32:49.296660Z",
+     "shell.execute_reply": "2022-04-25T20:32:49.296036Z",
+     "shell.execute_reply.started": "2022-04-25T20:32:49.275104Z"
     },
     "tags": []
    },
@@ -96,25 +96,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "13dd75c8-e0f4-4bf6-9309-61bd941813de",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-04-25T03:17:06.008941Z",
-     "iopub.status.busy": "2022-04-25T03:17:06.008699Z",
-     "iopub.status.idle": "2022-04-25T03:17:40.570113Z",
-     "shell.execute_reply": "2022-04-25T03:17:40.569466Z",
-     "shell.execute_reply.started": "2022-04-25T03:17:06.008912Z"
+     "iopub.execute_input": "2022-04-25T20:27:23.773645Z",
+     "iopub.status.busy": "2022-04-25T20:27:23.773381Z",
+     "iopub.status.idle": "2022-04-25T20:28:04.254961Z",
+     "shell.execute_reply": "2022-04-25T20:28:04.254325Z",
+     "shell.execute_reply.started": "2022-04-25T20:27:23.773618Z"
     },
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-04-25 14:27:24 Retrieved response from cache file \"cache/53383151aa3681d2d72140ca536876854cf92b69.json\"\n",
+      "2022-04-25 14:27:24 Created GeoDataFrame with 1 rows from 1 queries\n",
+      "2022-04-25 14:27:24 Constructed place geometry polygon(s) to query API\n",
+      "2022-04-25 14:27:24 Projected GeoDataFrame to +proj=utm +zone=13 +ellps=WGS84 +datum=WGS84 +units=m +no_defs +type=crs\n",
+      "2022-04-25 14:27:24 Projected GeoDataFrame to epsg:4326\n",
+      "2022-04-25 14:27:24 Projected GeoDataFrame to +proj=utm +zone=13 +ellps=WGS84 +datum=WGS84 +units=m +no_defs +type=crs\n",
+      "2022-04-25 14:27:24 Projected GeoDataFrame to epsg:4326\n",
+      "2022-04-25 14:27:24 Requesting data within polygon from API in 1 request(s)\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/Users/schmidmt/code/d2p-sp22/.venv/lib/python3.9/site-packages/osmnx/geocoder.py:110: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  gdf = gdf.append(_geocode_query_to_gdf(q, wr, by_osmid))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-04-25 14:27:26 Retrieved response from cache file \"cache/c264a44df4539660263220c4cb1efc0f4f76dba0.json\"\n",
+      "2022-04-25 14:27:26 Got all network data within polygon from API in 1 request(s)\n",
+      "2022-04-25 14:27:26 Creating graph from downloaded OSM data...\n",
+      "2022-04-25 14:27:30 Created graph with 142583 nodes and 262280 edges\n",
+      "2022-04-25 14:27:32 Added length attributes to graph edges\n",
+      "2022-04-25 14:27:32 Identifying all nodes that lie outside the polygon...\n",
+      "2022-04-25 14:27:38 Created nodes GeoDataFrame from graph\n",
+      "2022-04-25 14:27:41 Created r-tree spatial index for 142583 geometries\n",
+      "2022-04-25 14:27:43 Identified 137349 geometries inside polygon\n",
+      "2022-04-25 14:27:47 Removed 5234 nodes outside polygon\n",
+      "2022-04-25 14:27:47 Truncated graph by polygon\n",
+      "2022-04-25 14:27:47 Begin topologically simplifying the graph...\n",
+      "2022-04-25 14:27:51 Identified 20852 edge endpoints\n",
+      "2022-04-25 14:27:54 Found 2 edges between 176084364 and 5235620979 when simplifying\n",
+      "2022-04-25 14:27:54 Found 2 edges between 5235620979 and 5235620942 when simplifying\n",
+      "2022-04-25 14:27:54 Found 2 edges between 5235620942 and 5235620946 when simplifying\n",
+      "2022-04-25 14:27:54 Found 2 edges between 5235620946 and 2802881563 when simplifying\n",
+      "2022-04-25 14:27:59 Simplified graph: 137349 to 20852 nodes, 252230 to 58184 edges\n",
+      "2022-04-25 14:28:00 Identifying all nodes that lie outside the polygon...\n",
+      "2022-04-25 14:28:01 Created nodes GeoDataFrame from graph\n",
+      "2022-04-25 14:28:01 Created r-tree spatial index for 20852 geometries\n",
+      "2022-04-25 14:28:01 Identified 17337 geometries inside polygon\n",
+      "2022-04-25 14:28:02 Removed 3515 nodes outside polygon\n",
+      "2022-04-25 14:28:02 Removed 8 isolated nodes\n",
+      "2022-04-25 14:28:03 Got largest weakly connected component (16812 of 17329 total nodes)\n",
+      "2022-04-25 14:28:03 Truncated graph by polygon\n",
+      "2022-04-25 14:28:04 Counted undirected street segments incident on each node\n",
+      "2022-04-25 14:28:04 graph_from_polygon returned graph with 16812 nodes and 48256 edges\n",
+      "2022-04-25 14:28:04 graph_from_place returned graph with 16812 nodes and 48256 edges\n"
      ]
     }
    ],
@@ -1291,8 +1340,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "23787171-90c0-4d6f-bbb9-1bcef1d83dba",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-04-25T20:26:15.051301Z",
+     "iopub.status.busy": "2022-04-25T20:26:15.051074Z",
+     "iopub.status.idle": "2022-04-25T20:26:15.075210Z",
+     "shell.execute_reply": "2022-04-25T20:26:15.074493Z",
+     "shell.execute_reply.started": "2022-04-25T20:26:15.051278Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<networkx.classes.multidigraph.MultiDiGraph at 0x10b263820>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "denver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "ae7d8ccb-7ae3-425a-a0a2-ac9e3321e5b1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-04-25T20:26:41.591935Z",
+     "iopub.status.busy": "2022-04-25T20:26:41.591721Z",
+     "iopub.status.idle": "2022-04-25T20:26:41.612699Z",
+     "shell.execute_reply": "2022-04-25T20:26:41.612106Z",
+     "shell.execute_reply.started": "2022-04-25T20:26:41.591914Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "denver.nodes[27512439][\"distance_label\"] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "387ea381-7d5c-4a5c-b5ee-359322b0c772",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-04-25T20:26:44.858924Z",
+     "iopub.status.busy": "2022-04-25T20:26:44.858700Z",
+     "iopub.status.idle": "2022-04-25T20:26:44.881039Z",
+     "shell.execute_reply": "2022-04-25T20:26:44.880411Z",
+     "shell.execute_reply.started": "2022-04-25T20:26:44.858902Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'y': 39.7034891, 'x': -104.991885, 'street_count': 3, 'distance_label': 0}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "denver.nodes[27512439]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7a153b9-fcb5-4648-9370-fa05b8babd19",
    "metadata": {},
    "outputs": [],
    "source": []
