Adding Working Algorithm

--- a/notebooks/Finding Optimal Shared Streets Tutorial.ipynb
+++ b/notebooks/Finding Optimal Shared Streets Tutorial.ipynb
@@ -3589,6 +3589,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "240fe19e",
+   "metadata": {},
+   "source": [
+    "Creating buffers around the streets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f86a1ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "street_buffers = ox.utils_graph.graph_to_gdfs(street_data, edges=True, nodes=False)\\\n",
+    "    .to_crs(epsg=util.CONFIG.local_crs)\n",
+    "street_buffers[\"geometry\"] = street_buffers[\"geometry\"].buffer(400)\n",
+    "street_buffers = street_buffers.to_crs(epsg=util.CONFIG.base_crs)\n",
+    "street_buffers.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e7c6236",
+   "metadata": {},
+   "source": [
+    "Plotting streets with buffers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90edeac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(15, 10), facecolor=\"white\")\n",
+    "fig, base = ox.plot_graph(street_data, node_alpha=0, show=False, bgcolor=\"white\", ax=ax)\n",
+    "nbrhds_of_interest.plot(column=\"NBRHD_NAME\", ax=base, color=\"white\", edgecolor=\"black\", linewidth=2)\n",
+    "#street_data.plot(ax = base, color = \"black\", linewidth = 1)\n",
+    "street_buffers.plot(ax = base, color = \"none\", edgecolor = \"blue\", linewidth = 0.1);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c31947d8",
    "metadata": {},
    "source": [
@@ -4212,6 +4256,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e116adb",
+   "metadata": {},
+   "source": [
+    "Creating 1/4 mile buffers around nch_streets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99fd6796",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nch_buffers = nch_streets.to_crs(epsg=util.CONFIG.local_crs)\n",
+    "nch_buffers[\"geometry\"] = nch_buffers[\"geometry\"].buffer(400)\n",
+    "nch_buffers = nch_buffers.to_crs(epsg=util.CONFIG.base_crs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b34f16b5",
+   "metadata": {},
+   "source": [
+    "Subsetting crashes within NCH."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29d1551f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nch_crashes = crash_data.sjoin(nbrhds_of_interest.iloc[[0]])\n",
+    "nch_crashes.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7af484ba",
    "metadata": {},
    "source": [
@@ -4245,6 +4328,14 @@
     "for i in range(len(nch_buffers)):\n",
     "  newdat = nch_crashes.sjoin(nch_buffers.iloc[[i]])\n",
     "  nch_street_crashes[i] = len(newdat) / len(nch_crashes);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4396af99",
+   "metadata": {},
+   "source": [
+    "Subsetting all Key Destination data within NCH."
    ]
   },
   {
