--- a/paper/export.bib
+++ b/paper/export.bib
@@ -34,3 +34,15 @@
    title = {Optimization Approaches to Political Redistricting Problems},
    year = {2011},
 }
+@article{ DenverSP,
+	author = {Jill Locantore and Danny Katz},
+	title = {Denver’s Shared and Open Streets program working, should be
+continued as stay-at-home orders are lifted},
+	publisher = {DenverStreetPartnership},
+	url = {https://denverstreetspartnership.org/wp-content/uploads/2020/04/Media-Release-Shared-Streets-1.pdf},
+}
+@article{BoulderLowStress,
+	title = {Boulder Low-Stress Walk and Bike Network Plan},
+	year = {2019},
+	url = {https://bouldercolorado.gov/media/4530/download?inline=}
+}
